--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".CloseAccount"></activity>
-        <activity android:name=".MainPage" />
+        <activity android:name=".ReaderPage" />
         <activity android:name=".MainActivity" />
         <activity
-            android:name=".ReaderPage"
+            android:name=".MainPage"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
