--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,11 @@
         <activity android:name=".CallWaiter"></activity>
         <activity android:name=".OrderConfirmation" />
         <activity android:name=".MainPage" />
+        <activity android:name=".ReaderPage" />
         <activity android:name=".MainActivity" />
         <activity android:name=".CloseAccount"/>
         <activity
-            android:name=".ReaderPage"
+            android:name=".MainPage"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
