--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity android:name=".OrderConfirmation" />
         <activity android:name=".MainPage" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".CloseAccount"/>
         <activity
             android:name=".ReaderPage"
             android:label="@string/app_name">
