Implement all cardapio screens

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".ui.home.HomeActivity" />
         <activity android:name=".ui.category.CategoryActivity"/>
+        <activity android:name=".ui.detail.DetailActivity"/>
         <activity android:name=".CloseAccount"/>
         <activity
             android:name=".MainPage"
