--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".ui.home.HomeActivity" />
         <activity android:name=".ui.category.CategoryActivity"/>
+        <activity android:name=".ui.detail.DetailActivity"/>
         <activity
             android:name=".MainPage"
             android:label="@string/app_name">
