--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".CloseAccount"></activity>
+        <activity android:name=".MainPage" />
         <activity android:name=".CallWaiter"></activity>
         <activity android:name=".OrderConfirmation" />
-        <activity android:name=".MainPage" />
-        <activity android:name=".ReaderPage" />
         <activity android:name=".MainActivity" />
         <activity android:name=".ui.home.HomeActivity" />
         <activity android:name=".ui.category.CategoryActivity"/>
         <activity android:name=".ui.detail.DetailActivity"/>
-        <activity android:name=".CloseAccount"/>
+        <activity android:name=".ar.HelloArActivity"/>
         <activity
-            android:name=".MainPage"
+            android:name=".ReaderPage"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,7 +34,11 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+        <meta-data android:name="com.google.ar.core" android:value="required" />
     </application>
+
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-feature android:name="android.hardware.camera.ar" android:required="true"/>
     <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-permission android:name="android.permission.VIBRATE" />
